# awn-extras

./: .bzrignore  .gitignore  COPYING  COPYING.CCASAv3.0  ChangeLog  Makefile.am  Makefile.c-applet  Makefile.common  Makefile.desktop-files  Makefile.python-applet  Makefile.schemas  Makefile.vala-applet  README  README.contributors  autogen.sh  awn-extras.files  awn-manager.txt  bzr_log.lgMfxx  config.h.in  configure.ac  intltool-extract  intltool-merge  intltool-update
applets/: Makefile.am
awn-applets/awn-core-applets/: aclocal.m4  config.h.in  configure.ac  intltool-extract  intltool-merge  intltool-update
awn-applets/awn-extras-applets/: Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  intltool-merge  intltool-update  libtool
awn-applets/clock/: Makefile.am  applet.c  clock-applet.h  clock.desktop  utils.h
awn-applets/wobblyzini/: Makefile.am  wobblyzini.desktop  wobblyziniapplet.c  wobblyziniapplet.h
shared/python/: Makefile.am  __init__.py  __init__.py.in  awn_extras.defs  awn_extras.override  awn_extrasmodule.c  awnlib.py  awnmediaplayers.py  configbinder.py  defs.py.in  detach.py  threadqueue.py
src/: Makefile.am
src/BlingSwitcher/: Makefile.am  PySwitcher.desktop.in.in  PySwitcher.py
src/DesktopManager/: DesktopManager.desktop.in  DesktopManager.desktop.in.in  DesktopManager.schema-ini  Manager.py  config.py  configdialog.py  configgnome.py  configxfce.py  menu.py
src/MiMenu/: Makefile.am  keyboard.py  menus.py  mimenu.desktop.in.in  mimenu.py  pathfinder.py
src/PyClock/: Makefile.am  PyClock.desktop.in.in  PyClock.py
src/Taskmand-applet/: Makefile.am  Taskmand-applet.desktop.in.in  applet.c  taskmand-infos.xml
src/affinity/: Makefile.am  aff-button.c  aff-button.h  aff-results.c  aff-results.h  aff-search-engine-actions.c  aff-search-engine-apps.c  aff-search-engine-beagle.c  aff-search-engine-tracker.c  aff-settings.c  aff-settings.h  aff-sidebar.c  aff-sidebar.h  aff-start.c  aff-start.h  aff-utils.c  aff-window.c  affinity.c  affinity.desktop.in.in  affinity.h  applet.c  egg-pixbuf-thumbnail.c  egg-pixbuf-thumbnail.h  tomboykeybinder.c
src/animal-farm/: Makefile.am  animal-farm.desktop.in  animal-farm.desktop.in.in  animal-farm.py
src/arss/: Makefile.am  README  adddialog.glade  arss.desktop.in  arss.desktop.in.in  arss.py  arss.schema-ini  arssconfig.py  awn-applet-arss.schema-ini  configwindow.glade  feedparserdb.py  fpdb_unittest.py  menus.py  rss_awn.py
src/awn-meebo/: Makefile.am  awn-meebo.desktop.in  awn-meebo.desktop.in.in  awn-meebo.py
src/awn-notification-daemon/: AUTHORS
src/awnsystemmonitor/: Makefile.am  applet.c  awn-system-monitor.desktop.in.in  awnsystemmonitor.c  awnsystemmonitor.desktop.in.in  awnsystemmonitor.h  awntop.c  awntop.h  awntop_cairo_component.c  awntop_cairo_component.h  cairo-utils.h  cpu_component.c  cpumetergconf.c  cpumetergconf.h  dashboard.c  dashboard.h  dashboard_util.c  dashboard_util.h  date_time_component.c  date_time_component.h  loadavg_component.c  sysmem_component.c  sysmem_component.h  uptime_component.c
src/awnterm/: Makefile.am  applet.c  awn-applet-awnterm.schema-ini  awn-terminal.schemas.in  awnterm.c  awnterm.desktop.in  awnterm.desktop.in.in  awnterm.h  awnterm.schema-ini  settings.c  settings.h
src/battery-applet/: Makefile.am  battery-applet.desktop.in  battery-applet.desktop.in.in  battery-applet.py  battery-status.glade  battery-status.ui  messagehandler.py
src/cairo-clock/: Makefile.am  analogclock.py  awn-applet-cairo-clock.schema-ini  cairo-clock.desktop.in  cairo-clock.desktop.in.in  cairo-clock.glade  cairo-clock.py  cairo-clock.schema-ini  cairo-clock.ui  locations.py  locations.xml
src/cairo-menu/: Makefile.am  applet.c  backend-gnome.c  backend-gnome.h  cairo_main_menu.desktop.in.in  config_entries.c  config_entries.h  menu.c  menu.h  menu_list_item.h  render.c  render.h
src/cairo-menu-classic/: Makefile.am  applet.c  backend-gnome.c  backend-gnome.h  cairo_main_menu_classic.desktop.in.in  config_entries.c  config_entries.h  menu.c  menu.h  menu_list_item.h  render.c  render.h
src/calendar/: Makefile.am  calendar.desktop.in  calendar.desktop.in.in  calendarlogin.py  calendarprefs.py  calthread.py  clockcal.py  evocal.py  googlecal.py  icscal.py  owacal.py  sevensegled.py
src/clock/: Makefile.am  README  clock-applet.h  clock.desktop.in.in  utils.h
src/comic/: Makefile.am  comic.desktop.in  comic.desktop.in.in  comic.py  comicdialog.py  getborn.py  getdilbert.py  getferdnand.py  getgarfield.py  getnancy.py  getpcnp.py  getpeanuts.py  getpickles.py  getuf.py  getwiz.py  getxkcd.py
src/comics/: Makefile.am  comics.desktop.in  comics.desktop.in.in  comics.pot  comics.py  comics.sh  comics_add.py  comics_manage.py  comics_view.py  downloader.py  feed.py  main.py  qfeed.py  settings.py  shared.py  sv_SE.po  widgets.py
src/cpufreq/: Makefile.am  cpufreq.desktop.in  cpufreq.desktop.in.in  cpufreq.py  cpufreq.ui
src/digg/: Makefile.am  awn-digg.desktop.in.in  awn-digg.py  digg.desktop.in  digg.desktop.in.in  digg.py
src/digitalClock/: Makefile.am  dgClockPref.py  dgTime.py  digitalClock.desktop.in  digitalClock.desktop.in.in  digitalClock.py  digitalClock.schema-ini
src/feeds/: Makefile.am  awn-applet-feeds.schema-ini  feeds.desktop.in  feeds.py  prefs.py
src/file-browser-launcher/: Makefile.am  about.py  file-browser-launcher.desktop.in  file-browser-launcher.desktop.in.in  file-browser-launcher.py  file-browser-launcher.schema-ini  gconfwrapper.py  prefs.py
src/filebrowser/: Makefile.am  awn-applet-filebrowser.schema-ini  filebrowser-applet.c  filebrowser-defines.h  filebrowser-dialog.c  filebrowser-dialog.h  filebrowser-folder.c  filebrowser-folder.h  filebrowser-gconf.c  filebrowser-icon.c  filebrowser-utils.c  filebrowser.desktop.in  filebrowser.desktop.in.in  filebrowser.schema-ini  filebrowser.schemas.in
src/gmail/: AWN.py  Makefile.am  awngmail.desktop.in.in  gmail.py  libgmail.py
src/gwibfawn/: gwibfawn.desktop.in  gwibfawn.py
src/lastfm/: Makefile.am  lastfm.py  (+7 more)
(+1859 files in other folders)
