NULL =
SUBDIRS = \
	applets \
	shared/python \
	po \
	$(NULL)
	
EXTRA_DIST =				\
	intltool-extract.in		\
	intltool-merge.in		\
	intltool-update.in		\
	po/Makefile.in.in \
	po/POTFILES.skip \
	autogen.sh

DISTCLEANFILES =			\
	intltool-extract		\
	intltool-merge			\
	intltool-update

ACLOCAL_AMFLAGS = -I m4
